--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ __pycache__/
 .DS_Store
 icd_analysis/local_paths.py
 covid_vaccine_analysis/local_paths.py
+
+sciserv/sciserv.egg-info/
+
+scientistgpt/scientistgpt.egg-info/
