--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ covid_vaccine_analysis/local_paths.py
 sciserv/sciserv.egg-info/
 
 scientistgpt/scientistgpt.egg-info/
+
+sciserv/sciserv/build/
+
+frontend/Documentation/dist/assets/libs/chance/chance.min.js
