update gitignore to ignore gpt generated code files

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ sciserv/sciserv/build/
 frontend/Documentation/dist/assets/libs/chance/chance.min.js
 
 *.lock
+
+# all files starting with gpt_code_attempt
+gpt_code_attempt*
