major refactor of projects

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ frontend/Documentation/dist/assets/libs/chance/chance.min.js
 
 # all files starting with gpt_code_attempt
 gpt_code_attempt*
+examples/diabetes/local_paths.py
+
+examples/local_paths.py
