--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ data_to_paper/examples/diabetes/local_paths.py
 data_to_paper/examples/local_paths.py
 
 tests/integration/citations/.pytest_cache/v/cache/
+
+data_to_paper_package/data_to_paper.egg-info/
