--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,10 @@ gevent-websocket==0.10.1
 openai==0.27.8
 regex==2023.6.3
 tiktoken==0.4.0
+pytest~=7.4.0
+numpy~=1.25.1
+pandas~=2.0.3
+setuptools~=67.8.0
+pygments~=2.15.1
+requests~=2.31.0
+unidecode~=1.3.6
