--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ data_to_paper/examples/local_paths.py
 tests/integration/citations/.pytest_cache/v/cache/
 
 data_to_paper_package/data_to_paper.egg-info/
+
+data_to_paper/data_to_paper_examples/examples/local_paths.py
