--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ pandas~=2.0.3
 pygments~=2.15.1
 requests~=2.31.0
 unidecode~=1.3.6
-PyPDF2~=3.0.1
+PyMuPDF~=1.23.20
 py-spy~=0.3.14
 ansi2html~=1.8.0
 networkx~=3.2.1
