--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ regex==2023.6.3
 tiktoken==0.4.0
 pytest~=7.4.0
 numpy~=1.25.1
-pandas~=2.0.3
+pandas==2.0.3
 pygments~=2.15.1
 requests~=2.31.0
 unidecode~=1.3.6
