--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ PyMuPDF~=1.23.20
 py-spy~=0.3.14
 ansi2html~=1.8.0
 networkx~=3.2.1
-
+PySide6~=6.6.3.1
 statsmodels~=0.14.0
 joblib~=1.3.1
 gipc~=1.5.0
