--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,21 @@
-aiohttp==3.8.4
-aiosignal==1.3.1
-asttokens==2.2.1
-async-timeout==4.0.2
-attrs==23.1.0
-backcall==0.2.0
-bidict==0.22.1
-blinker==1.6.2
-certifi==2023.5.7
-charset-normalizer==3.1.0
-click==8.1.3
 colorama==0.4.6
-decorator==5.1.1
-exceptiongroup==1.1.1
-executing==1.2.0
-Flask==2.3.2
-Flask-SocketIO==5.3.4
-frozenlist==1.3.3
-gevent==22.10.2
-greenlet==2.0.2
-idna==3.4
-gevent-websocket==0.10.1
 openai==0.27.8
 regex==2023.6.3
 tiktoken==0.4.0
-pytest~=7.4.0
-numpy~=1.25.1
-pandas==2.0.3
 pygments~=2.15.1
 requests~=2.31.0
 unidecode~=1.3.6
 PyMuPDF~=1.23.20
 py-spy~=0.3.14
 ansi2html~=1.8.0
-networkx~=3.2.1
-PySide6~=6.6.3.1
+PySide6==6.5.2
+
+pytest~=7.4.0
+
+numpy~=1.25.1
+pandas==2.0.3
+Jinja2~=3.1.4
 statsmodels~=0.14.0
-joblib~=1.3.1
-gipc~=1.5.0
 scipy~=1.11.1
 scikit-learn~=1.3.0
-plastex~=3.1
+networkx~=3.2.1
