replace `setup.py` with `pyproject.toml`

--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,7 @@ data_to_paper_package/data_to_paper.egg-info/
 data_to_paper/data_to_paper_examples/examples/local_paths.py
 
 # json config files
+data_to_paper/data_to_paper/interactive/config/run_setup.json
+data-to-paper/data_to_paper.egg-info/
+
 src/data_to_paper/interactive/config/run_setup.json
