calling 'data-to-paper' from terminal now start the gui app

--- a/data_to_paper/pyproject.toml
+++ b/data_to_paper/pyproject.toml
@@ -52,5 +52,8 @@ dev = [
     "pytest-benchmark",
 ]
 
+[project.gui-scripts]
+data-to-paper = "data_to_paper.scripts.run:run"
+
 [tool.setuptools]
 py-modules = ["data_to_paper"]
