--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,7 @@ data_to_paper/data_to_paper_examples/examples/local_paths.py
 data_to_paper/data_to_paper/interactive/config/run_setup.json
 data-to-paper/data_to_paper.egg-info/
 
+
+**.egg-info/
+
 src/data_to_paper/interactive/config/run_setup.json
