--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -9,37 +8,9 @@ __pycache__/
 # C extensions
 *.so
 
+# Distribution / packaging
 .DS_Store
-data_to_paper/examples/icd_analysis/local_paths.py
-data_to_paper/examples/covid_vaccine_analysis/local_paths.py
-
-data_to_paper_server/data_to_paper_server.egg-info/
-
-data_to_paper/data_to_paper.egg-info/
-
-data_to_paper_server/data_to_paper_server/build/
-
-frontend/Documentation/dist/assets/libs/chance/chance.min.js
-
 *.lock
-
-# all files starting with gpt_code_attempt
-gpt_code_attempt*
-data_to_paper/examples/diabetes/local_paths.py
-
-data_to_paper/examples/local_paths.py
-
-tests/integration/citations/.pytest_cache/v/cache/
-
-data_to_paper_package/data_to_paper.egg-info/
-
-data_to_paper/data_to_paper_examples/examples/local_paths.py
-
-# json config files
-data_to_paper/data_to_paper/interactive/config/run_setup.json
-data-to-paper/data_to_paper.egg-info/
-
-
 **.egg-info/
 
 src/data_to_paper/interactive/config/run_setup.json
