--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,9 @@ dev = [
 [project.gui-scripts]
 data-to-paper = "data_to_paper.scripts.run:run"
 
+[project.scripts]
+data-to-paper-chkres = "data_to_paper.scripts.check_resources:check_resources"
+
 [tool.setuptools]
 include-package-data = true
 
