include the resource files in the package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,3 +73,6 @@ include-package-data = true
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.setuptools.package-data]
+"data_to_paper.latex.resources" = ["*"]
