--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ dependencies = [
     "scikit-learn~=1.3.0",
     "networkx~=3.2.1",
     "matplotlib~=3.9.0",
+    "litellm>=1.74.6",
 ]
 requires-python = ">=3.9"
 
